# developer-productivity-platform

./: .gitattributes  .gitignore  README.md  devserver.py  gemini.py  index.html  main.py  pyproject.toml
.claude/: launch.json
.detcode/: detcode.db
.github/workflows/: ci.yml
api/: chat.py  run.py
detcode/: __init__.py  __main__.py  cli.py  cnl.py  determinism.py  ir.py  planner.py  service.py  sourceedit.py  store.py  verify.py
detcode/engines/: __init__.py  builder.py  codeindex.py  complete.py  converse.py  diagnose.py  document.py  explain.py  gentest.py  knowledge.py  mint.py  plan.py  repair.py  retrieve.py  rewrite.py  scaffold.py  synth.py  teach.py  ticket.py  web.py
detcode/packs/: __init__.py  expense_tracker.py  generic.py  resume_tailorer.py  teaching_assistant.py  webwrap.py
detcode/stacks/: __init__.py  _shared.py  django_stack.py  express_stack.py  fastapi_stack.py  flask_stack.py  go_stack.py  node_stack.py  react_stack.py  rust_stack.py  (+2 more)
examples/: buggy_area.py  buggy_area.repair.json  fullname.examples.json  models.spec.json
tests/: test_agent.py  test_builder.py  test_cnl.py  test_composition.py  test_converse.py  test_determinism.py  test_document.py  test_explain.py  test_gate.py  test_gentest.py  test_knowledge.py  test_mint.py  test_pack_expense.py  test_pack_resume.py  test_pack_teaching.py  test_plan.py  test_repair.py  test_retrieve.py  test_rewrite.py  test_scaffold.py  test_service.py  test_sharing.py  test_stacks.py  test_store.py  test_synth.py  test_teach.py  test_ticket.py  test_web.py  test_webwrap.py  test_wsgi.py
