[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detcode"
version = "0.6.0"
description = "A deterministic coding assistant: LLM-style refactors, codegen, and synthesis with no LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Shaw" }]
keywords = ["codemod", "refactor", "program-synthesis", "deterministic", "ast"]
dependencies = []

[project.scripts]
detcode = "detcode.cli:main"

[tool.setuptools.packages.find]
include = ["detcode*"]

[tool.setuptools.package-data]
detcode = ["py.typed"]
